# lithox

./: MANIFEST.in  README.md  pyproject.toml
lithox/: __init__.py  convert.py  defaults.py  paths.py  simulation.py  utilities.py  variation.py
lithox/kernels/: defocus.npy  defocus_ct.npy  focus.npy  focus_ct.npy
lithox/scales/: defocus.npy  focus.npy
lithox/utilities/: convert.py  fourier.py  io.py  spatial.py
scripts/: simulation.py  variation.py
